Bug: 60251 check in final UI drop with bug fixes for 13 locales into helix
http://bugzilla.zimbra.com/show_bug.cgi?id=60251

Copied from Perforce
 Change: 321407

--- a/src/zimlet/com_zimbra_social/com_zimbra_social_de.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_de.properties
@@ -230,6 +230,7 @@ seeAllComments = Alle {0} Kommentare anzeigen
 
 #socialcast
 couldNotAddCommentToSC =   Kommentar konnte nicht zu Socialcast hinzugef\u00fcgt werden
+couldNotAuthenticateSC = Der entsprechende Socialcast-Account konnte nicht authentifiziert werden. Bitte l\u00f6schen Sie den Account und f\u00fcgen Sie ihn erneut hinzu. Pr\u00fcfen Sie, ob damit das Problem behoben ist.
 #digg
 diggError = Digg-Fehler: 
 
