--- a/src/zimlet/com_zimbra_social/com_zimbra_social_es.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_es.properties
@@ -230,6 +230,7 @@ seeAllComments = Ver los {0} comentarios
 
 #socialcast
 couldNotAddCommentToSC =   No se ha podido a\u00f1adir el comentario en Socialcast
+couldNotAuthenticateSC = No se ha podido autenticar la cuenta de Socialcast correspondiente. Elimina y vuelve a a\u00f1adirla para comprobar si se ha eliminado el problema.
 #digg
 diggError = Error en Digg: 
 
