--- a/src/zimlet/com_zimbra_social/com_zimbra_social_fr.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_fr.properties
@@ -230,6 +230,7 @@ seeAllComments = Voir les {0} commentaires
 
 #socialcast
 couldNotAddCommentToSC =   Impossible d'ajouter un commentaire sur Socialcast
+couldNotAuthenticateSC = \u00c9chec de l'authentification du compte Socialcast correspondant. Veuillez le supprimer et l'ajouter \u00e0 nouveau pour essayer de r\u00e9soudre le probl\u00e8me.
 #digg
 diggError = Erreur Digg\u00a0: 
 
