--- a/src/zimlet/com_zimbra_social/com_zimbra_social_hu.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_hu.properties
@@ -230,6 +230,7 @@ seeAllComments = \u00d6sszes {0} megjegyz\u00e9s megjelen\u00edt\u00e9se
 
 #socialcast
 couldNotAddCommentToSC =   Nem siker\u00fclt megjegyz\u00e9st hozz\u00e1adni a Socialcast-fi\u00f3khoz
+couldNotAuthenticateSC = Nem siker\u00fclt a hiteles\u00edt\u00e9s a megfelel\u0151 Socialcast-fi\u00f3kkal. T\u00f6r\u00f6lje \u00e9s adja ism\u00e9t hozz\u00e1, majd ellen\u0151rizze, hogy a probl\u00e9ma megsz\u0171nt-e.
 #digg
 diggError = Digg-hiba: 
 
