--- a/src/zimlet/com_zimbra_social/com_zimbra_social_pl.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_pl.properties
@@ -230,6 +230,7 @@ seeAllComments = Poka\u017c wszystkie komentarze ({0})
 
 #socialcast
 couldNotAddCommentToSC =   Nie mo\u017cna doda\u0107 komentarza do serwisu Socialcast
+couldNotAuthenticateSC = Nie mo\u017cna uwierzytelni\u0107 odpowiedniego konta Socialcast. Usu\u0144 konto i dodaj je ponownie, aby sprawdzi\u0107, czy problem ust\u0105pi.
 #digg
 diggError = B\u0142\u0105d serwisu Digg: 
 
