--- a/src/zimlet/com_zimbra_social/com_zimbra_social_ro.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_ro.properties
@@ -230,6 +230,7 @@ seeAllComments = Vede\u0163i toate {0} comentariile
 
 #socialcast
 couldNotAddCommentToSC =   Nu s-a putut ad\u0103uga comentariul pe Socialcast
+couldNotAuthenticateSC = Nu s-a putut autentifica contul Socialcast corespunz\u0103tor. \u015eterge\u0163i-l \u015fi read\u0103uga\u0163i-l, apoi vede\u0163i dac\u0103 problema s-a rezolvat.
 #digg
 diggError = Eroare Digg: 
 
