--- a/src/zimlet/com_zimbra_social/com_zimbra_social_tr.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_tr.properties
@@ -230,6 +230,7 @@ seeAllComments = T\u00fcm {0} yorumu g\u00f6r\u00fcnt\u00fcle
 
 #socialcast
 couldNotAddCommentToSC =   Socialcast'e Yorum eklenemedi
+couldNotAuthenticateSC = \u0130lgili Socialcast Hesab\u0131n\u0131n kimli\u011fi do\u011frulanmad\u0131. L\u00fctfen silin ve yeniden ekleyin ve sorunun devam edip etmedi\u011fine bak\u0131n.
 #digg
 diggError = Digg Hatas\u0131: 
 
