--- a/src/zimlet/com_zimbra_social/com_zimbra_social_zh_CN.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_zh_CN.properties
@@ -230,6 +230,7 @@ seeAllComments = \u67e5\u770b\u6240\u6709 {0} \u6761\u8bc4\u8bba
 
 #socialcast
 couldNotAddCommentToSC =   \u65e0\u6cd5\u5411 Socialcast \u6dfb\u52a0\u8bc4\u8bba
+couldNotAuthenticateSC = \u65e0\u6cd5\u9a8c\u8bc1\u76f8\u5e94\u7684 Socialcast \u5e10\u6237\u3002\u8bf7\u5c06\u5176\u5220\u9664\u540e\u518d\u91cd\u65b0\u6dfb\u52a0\uff0c\u770b\u770b\u95ee\u9898\u662f\u5426\u4f1a\u5f97\u5230\u89e3\u51b3\u3002
 #digg
 diggError = Digg \u9519\u8bef: 
 
