--- a/src/zimlet/com_zimbra_social/com_zimbra_social_ja.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_ja.properties
@@ -230,6 +230,7 @@ seeAllComments = {0}\u306e\u30b3\u30e1\u30f3\u30c8\u3092\u3059\u3079\u3066\u8868
 
 #socialcast
 couldNotAddCommentToSC =   Socialcast\u306b\u30b3\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
+couldNotAuthenticateSC = \u5bfe\u5fdc\u3059\u308bSocialcast\u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u8a8d\u8a3c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u554f\u984c\u304c\u7d99\u7d9a\u3057\u305f\u3089\u3001\u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u524a\u9664\u3057\u3066\u304b\u3089\u518d\u5ea6\u8ffd\u52a0\u3057\u3066\u307f\u3066\u304f\u3060\u3055\u3044\u3002
 #digg
 diggError = Digg\u306e\u30a8\u30e9\u30fc\uff1a 
 
