--- a/src/zimlet/com_zimbra_social/com_zimbra_social_ko.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_ko.properties
@@ -230,6 +230,7 @@ seeAllComments = \ubaa8\ub4e0 {0}\uac1c \uc758\uacac \ud45c\uc2dc
 
 #socialcast
 couldNotAddCommentToSC =   Socialcast\uc5d0 \uc758\uacac\uc744 \ucd94\uac00\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
+couldNotAuthenticateSC = \ud574\ub2f9 Socialcast \uacc4\uc815\uc744 \uc778\uc99d\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4. Socialcast \uacc4\uc815\uc744 \uc0ad\uc81c\ud55c \ud6c4 \ub2e4\uc2dc \ucd94\uac00\ud558\uc5ec \ubb38\uc81c\uac00 \ud574\uacb0\ub418\uc5c8\ub294\uc9c0 \ud655\uc778\ud558\uc2ed\uc2dc\uc624.
 #digg
 diggError = Digg \uc624\ub958: 
 
