Bug: 62454 check in 9 locale into Helix for 7.1.3 drop 1 and 4 bug fixes
http://bugzilla.zimbra.com/show_bug.cgi?id=62454

Copied from Perforce
 Change: 329063

--- a/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_da.properties
+++ b/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_da.properties
@@ -15,7 +15,7 @@
 
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = LinkedIn
-description = Kobler sig p\u00e5 e-mail-zimlet og viser LinkedIn-s\u00f8geresultater for en given e-mail
+description = Kobler sig p\u00e5 e-mail-zimlet og viser LinkedIn-s\u00f8geresultater for en given e-mail.
 
 label = LinkedIn
 tooltip = Konfigur\u00e9r LinkedIn-konto
