--- a/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_hi.properties
+++ b/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_hi.properties
@@ -15,7 +15,7 @@
 
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = LinkedIn
-description = \u0908\u092e\u0947\u0932 Zimlet \u092a\u0930 \u0939\u0941\u0915; \u0915\u093f\u0938\u0940 \u0926\u093f\u090f \u0917\u090f \u0908\u092e\u0947\u0932 \u0915\u0947 \u0932\u093f\u090f LinkedIn \u0916\u094b\u091c \u092a\u0930\u093f\u0923\u093e\u092e \u0926\u093f\u0916\u093e\u0924\u093e \u0939\u0948
+description = \u0908\u092e\u0947\u0932 Zimlet \u092a\u0930 \u0939\u0941\u0915; \u0915\u093f\u0938\u0940 \u0926\u093f\u090f \u0917\u090f \u0908\u092e\u0947\u0932 \u0915\u0947 \u0932\u093f\u090f LinkedIn \u0916\u094b\u091c \u092a\u0930\u093f\u0923\u093e\u092e \u0926\u093f\u0916\u093e\u0924\u093e \u0939\u0948.
 
 label = LinkedIn
 tooltip = LinkedIn \u0916\u093e\u0924\u093e \u0915\u0949\u0928\u094d\u095e\u093f\u0917\u0930 \u0915\u0930\u0947\u0902
