--- a/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_it.properties
+++ b/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_it.properties
@@ -15,7 +15,7 @@
 
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = LinkedIn
-description = Associato allo Zimlet email, mostra i risultati della ricerca LinkedIn per un determinato messaggio email
+description = Associato allo Zimlet e-mail, mostra i risultati della ricerca LinkedIn per un determinato messaggio e-mail.
 
 label = LinkedIn
 tooltip = Configura account LinkedIn
