--- a/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_nl.properties
+++ b/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_nl.properties
@@ -15,7 +15,7 @@
 
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = LinkedIn
-description = Haakt vast aan e-mail-zimlet; toont LinkedIn-zoekresultaat voor een bepaalde e-mail
+description = Haakt vast aan e-mail-zimlet; toont LinkedIn-zoekresultaat voor een bepaalde e-mail.
 
 label = LinkedIn
 tooltip = LinkedIn-account configureren
