--- a/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_pt_BR.properties
+++ b/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_pt_BR.properties
@@ -15,7 +15,7 @@
 
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = LinkedIn
-description = Vincula ao Zimlet de e-mails; exibe o resultado de busca do LinkedIn para um determinado e-mail
+description = Vincula ao Zimlet de e-mails; exibe o resultado de busca do LinkedIn para um determinado e-mail.
 
 label = LinkedIn
 tooltip = Configurar conta do LinkedIn
