--- a/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_sv.properties
+++ b/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_sv.properties
@@ -15,7 +15,7 @@
 
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = LinkedIn
-description = Kopplas till zimlet-paket f\u00f6r e-post. Visar LinkedIn-s\u00f6kresultat f\u00f6r det aktuella e-postmeddelandet
+description = Kopplas till zimlet-paket f\u00f6r e-post. Visar LinkedIn-s\u00f6kresultat f\u00f6r det aktuella e-postmeddelandet.
 
 label = LinkedIn
 tooltip = Konfigurera LinkedIn-konto
