--- a/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_zh_HK.properties
+++ b/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_zh_HK.properties
@@ -15,7 +15,7 @@
 
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = LinkedIn
-description = \u52fe\u9ede\u96fb\u90f5 Zimlet\uff1b\u986f\u793a\u7d66\u5b9a\u96fb\u90f5\u7684 LinkedIn \u641c\u5c0b\u7d50\u679c
+description = \u806f\u7e6b\u5230\u96fb\u90f5 Zimlet\uff1b\u70ba\u4e00\u6536\u5230\u7684\u96fb\u90f5\u986f\u793a LinkedIn \u641c\u5c0b\u7d50\u679c\u3002
 
 label = LinkedIn
 tooltip = \u8a2d\u7f6e LinkedIn \u5e33\u6236
