--- a/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_en_GB.properties
+++ b/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_en_GB.properties
@@ -14,7 +14,7 @@
 # 
 
 label = Search Highlighter
-description = After a mail search, this Zimlet highlights Search terms with yellow color
+description = After a mail search, this Zimlet highlights Search terms with yellow colour.
 
 SearchHighlighterZimlet_MenuLabel=Clear Search Highlights
 SearchHighlighterZimlet_ZimletError=Search Highlighter Zimlet Error:
