--- a/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_it.properties
+++ b/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_it.properties
@@ -14,7 +14,7 @@
 # 
 
 label = Evidenziazione ricerca
-description = Dopo una ricerca di messaggi email, questo Zimlet evidenza i termini cercati in giallo
+description = Dopo una ricerca di messaggi e-mail, questo Zimlet evidenza i termini cercati in giallo.
 
 SearchHighlighterZimlet_MenuLabel=Annulla evidenziazioni ricerca
 SearchHighlighterZimlet_ZimletError=Errore zimlet evidenziazione ricerca:
