--- a/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_nl.properties
+++ b/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_nl.properties
@@ -14,7 +14,7 @@
 # 
 
 label = Search Highlighter
-description = Na het zoeken in de e-mail markeert deze Zimlet de zoektermen met geel
+description = Na het zoeken in de e-mail markeert deze zimlet de zoektermen met geel.
 
 SearchHighlighterZimlet_MenuLabel=Search Highlights leegmaken
 SearchHighlighterZimlet_ZimletError=Fout in zimlet Search Highlighter:
