--- a/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_zh_HK.properties
+++ b/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_zh_HK.properties
@@ -14,7 +14,7 @@
 # 
 
 label = \u641c\u5c0b\u51f8\u986f\u7a0b\u5f0f
-description = \u90f5\u4ef6\u641c\u5c0b\u4e4b\u5f8c\uff0c\u6b64 Zimlet \u7528\u9ec3\u8272\u51f8\u986f\u641c\u5c0b\u5b57\u8a5e
+description = \u900f\u904e\u90f5\u4ef6\u641c\u5c0b\u5f8c\uff0cZimlet \u7a81\u986f\u6709\u9ec3\u8272\u7684\u300c\u641c\u5c0b\u300d\u9805\u76ee\u3002
 
 SearchHighlighterZimlet_MenuLabel=\u6e05\u9664\u641c\u5c0b\u51f8\u986f
 SearchHighlighterZimlet_ZimletError=\u641c\u5c0b\u51f8\u986f\u7a0b\u5f0f Zimlet \u51fa\u932f\uff1a
