--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex_da.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex_da.properties
@@ -142,6 +142,7 @@ WebExZimlet_invalidAlternateHost=Ugyldig alternativ v\u00e6rt.<br/>Alternative v
 WebExZimlet_setupAlternateHost=Alternative v\u00e6rter bruges til at tillade andre v\u00e6rter at planl\u00e6gge m\u00f8der p\u00e5 dine vegne. Hvis du vil bruge denne funktion, skal den konfigureres i din WebEx-profil. <br/><br/>S\u00e5dan giver du tilladelse til en alternativ v\u00e6rt:<br/>1. Log p\u00e5 din WebEx-konto.<br/>2. S\u00f8g efter Konfiguration > Min profil > Sessionsindstillinger > Planl\u00e6gningstilladelse.<br/>3. Indtast alternative v\u00e6rter.<br/>4. Gem din profil.
 WebExZimlet_userPwdCIdRequired= WebEx-brugernavn, -adgangskode og -firma-id er p\u00e5kr\u00e6vet.
 WebExZimlet_couldNotRegisterAttendees = Kunne ikke registrere deltagerne
+modifyAlertNotice = WebEx-m\u00f8det blev oprettet. <br><br>Bem\u00e6rk:<br> Hvis du \u00e6ndrer oplysningerne for dette m\u00f8de (udover beskrivelsen), er du n\u00f8dt til at oprette WebEx-m\u00f8det igen
 
 #
 # Calendar
