--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex_nl.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex_nl.properties
@@ -142,6 +142,7 @@ WebExZimlet_invalidAlternateHost=Ongeldige alternatieve host.<br/>Alternatieve h
 WebExZimlet_setupAlternateHost=Alternatieve hosts worden gebruikt om andere hosts in staat te stellen vergaderingen te plannen namens jou. Als je deze functie wilt gebruiken, moet deze zijn geconfigureerd in je WebEx-profiel.<br/><br/>Je kunt als volgt toestemming verlenen voor een alternatieve host: <br/>1. Meld je aan bij je WebEx-account. <br/>2. Ga naar Instellingen > Mijn profiel > Sessieopties > Planningstoestemming.<br/>3. Voer alternatieve hosts in.<br/>Sla je profiel op.
 WebExZimlet_userPwdCIdRequired= WebEx-gebruikersnaam, -wachtwoord en -bedrijfs-ID zijn vereist.
 WebExZimlet_couldNotRegisterAttendees = Kan geen deelnemers registreren
+modifyAlertNotice = WebEx-vergadering is gemaakt. <br><br>Let op:<br> Als je een ander onderdeel van deze vergadering dan de inhoud van de tekst wijzigt, moet je de WebEx-vergadering opnieuw maken
 
 #
 # Calendar
