--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex_pt_BR.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex_pt_BR.properties
@@ -142,6 +142,7 @@ WebExZimlet_invalidAlternateHost=Host alternativo inv\u00e1lido.<br/>Hosts alter
 WebExZimlet_setupAlternateHost=Hosts alternativos s\u00e3o usados para permitir que outros hosts programem reuni\u00f5es em seu nome. Para usar esse recurso, ele deve estar configurado no seu perfil do WebEx. <br/><br/>Para conceder permiss\u00e3o para um host alternativo:<br/>1. Efetue login na sua conta do WebEx.<br/>2. V\u00e1 para Configura\u00e7\u00e3o > Meu perfil > Op\u00e7\u00f5es de sess\u00e3o > Permiss\u00e3o de programa\u00e7\u00e3o.<br/>3. Insira hosts alternativos.<br/>4. Salve o seu perfil.
 WebExZimlet_userPwdCIdRequired= O nome de usu\u00e1rio, a senha e a Id de empresa do WebEx s\u00e3o necess\u00e1rias.
 WebExZimlet_couldNotRegisterAttendees = N\u00e3o foi poss\u00edvel registrar participantes
+modifyAlertNotice = A reuni\u00e3o do WebEx foi criada com \u00eaxito. <br><br>Observe:<br> Se voc\u00ea modificar esta reuni\u00e3o (com exce\u00e7\u00e3o do conte\u00fado), voc\u00ea ter\u00e1 de recriar a reuni\u00e3o do WebEx
 
 #
 # Calendar
