--- a/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_da.properties
+++ b/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_da.properties
@@ -14,7 +14,7 @@
 # 
 
 label = Fremh\u00e6vning af s\u00f8gning
-description = Denne Zimlet fremh\u00e6ver s\u00f8geord med gult efter en e-mail-s\u00f8gning
+description = Denne zimlet fremh\u00e6ver s\u00f8geord med gult efter en e-mail-s\u00f8gning.
 
 SearchHighlighterZimlet_MenuLabel=Ryd S\u00f8g efter nyheder
 SearchHighlighterZimlet_ZimletError=Fejl i Zimlet til S\u00f8g efter nyheder:
