--- a/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_pt_BR.properties
+++ b/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_pt_BR.properties
@@ -14,7 +14,7 @@
 # 
 
 label = Buscar real\u00e7ador
-description = Depois de uma busca de e-mails, este Zimlet real\u00e7a os termos de busca em amarelo
+description = Depois de uma busca de e-mails, este Zimlet real\u00e7a os termos de busca em amarelo.
 
 SearchHighlighterZimlet_MenuLabel=Limpar realces da busca
 SearchHighlighterZimlet_ZimletError=Erro do Zimlet real\u00e7ador de busca:
