--- a/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_sv.properties
+++ b/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_sv.properties
@@ -14,7 +14,7 @@
 # 
 
 label = S\u00f6kmarkeraren
-description = Efter en e-posts\u00f6kning markerar det h\u00e4r zimlet-paketet s\u00f6ktermer i gult
+description = Efter en e-posts\u00f6kning markerar det h\u00e4r zimlet-paketet s\u00f6ktermer i gult.
 
 SearchHighlighterZimlet_MenuLabel=Rensa s\u00f6kmarkeringar
 SearchHighlighterZimlet_ZimletError=Fel i zimlet-paketet S\u00f6kmarkerare:
