--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex_it.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex_it.properties
@@ -142,6 +142,7 @@ WebExZimlet_invalidAlternateHost=Host alternativo non valido.<br/>Gli host alter
 WebExZimlet_setupAlternateHost=Gli host alternativi vengono utilizzati per consentire agli altri host di pianificare incontri per conto dell'utente. Per usare questa funzione, \u00e8 necessario configurare queste informazioni nel profilo personale WebEx. <br/><br/>Per garantire l'autorizzazione a utilizzare un host alternativo:<br/>1. Accedi al tuo account WebEx.<br/>2. Vai a Imposta > Profilo personale > Opzioni sessione > Pianificazione autorizzazione.<br/>3. Inserisci gli host alternativi.<br/>4. Salva il tuo profilo.
 WebExZimlet_userPwdCIdRequired= Sono necessari nome utente WebEx, password e Id azienda.
 WebExZimlet_couldNotRegisterAttendees = Impossibile registrare partecipanti
+modifyAlertNotice = L'incontro WebEx \u00e8 stato creato. <br><br>Nota:<br> se si modifica l'incontro (ad eccezione del testo del corpo), sar\u00e0 necessario crearlo di nuovo
 
 #
 # Calendar
