--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex_sv.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex_sv.properties
@@ -142,6 +142,7 @@ WebExZimlet_invalidAlternateHost=Den alternativa v\u00e4rden \u00e4r ogiltig.<br
 WebExZimlet_setupAlternateHost=Alternativa v\u00e4rdar anv\u00e4nds till att till\u00e5ta andra v\u00e4rda att schemal\u00e4gga m\u00f6ten f\u00f6r din r\u00e4kning. Om du vill anv\u00e4nda den h\u00e4r funktionen m\u00e5ste den ha konfigurerats i din WebEx-profil. <br/><br/>S\u00e5 h\u00e4r ger du tillst\u00e5nd till en alternativ v\u00e4rd:<br/>1. Logga in p\u00e5 ditt WebEx-konto.<br/>2. Bl\u00e4ddra till Inst\u00e4llningar > Min profil > Sessionsalternativ > Beh\u00f6righet f\u00f6r schemal\u00e4ggning.<br/>3. Ange alternativa v\u00e4rdar.<br/>4. Spara profilen.
 WebExZimlet_userPwdCIdRequired= Anv\u00e4ndarnamn, l\u00f6senord och f\u00f6retags-ID f\u00f6r WebEx kr\u00e4vs.
 WebExZimlet_couldNotRegisterAttendees = Det gick inte att registrera deltagare
+modifyAlertNotice = WebEx-m\u00f6tet har skapats. <br><br>Obs!<br> Om du \u00e4ndrar det h\u00e4r m\u00f6tet (f\u00f6rutom dess inneh\u00e5ll) m\u00e5ste du skapa WebEx-m\u00f6tet p\u00e5 nytt
 
 #
 # Calendar
