--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex_zh_HK.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex_zh_HK.properties
@@ -142,6 +142,7 @@ WebExZimlet_invalidAlternateHost=\u7121\u6548\u5099\u7528\u4e3b\u6a5f\u3002<br/>
 WebExZimlet_setupAlternateHost=\u5099\u7528\u4e3b\u6a5f\u4e43\u7528\u4ee5\u5141\u8a31\u5176\u4ed6\u4e3b\u6a5f\u4ee3\u60a8\u5b89\u6392\u6703\u8b70\u3002\u8981\u4f7f\u7528\u9019\u9805\u529f\u80fd\uff0c\u5fc5\u9808\u5728\u60a8\u7684 WebEx \u6a94\u6848\u4e2d\u5c0d\u6b64\u9032\u884c\u8a2d\u5b9a\u3002<br/><br/>\u5411\u5099\u7528\u4e3b\u6a5f\u6388\u6b0a\uff1a<br/>1. \u767b\u5165\u60a8\u7684 WebEx \u5e33\u6236\u3002<br/>2. \u524d\u5f80\u8a2d\u5b9a > \u6211\u7684\u6a94\u6848 > \u6642\u9650\u9078\u64c7 > \u65e5\u7a0b\u5b89\u6392\u6b0a\u9650\u3002<br/>3. \u8f38\u5165\u5099\u7528\u4e3b\u6a5f\u3002<br/>4. \u5132\u5b58\u60a8\u7684\u6a94\u6848\u3002
 WebExZimlet_userPwdCIdRequired= WebEx \u7528\u6236\u540d\u7a31\u3001\u5bc6\u78bc\u53ca\u516c\u53f8 Id \u5fc5\u9808\u63d0\u4f9b\u3002
 WebExZimlet_couldNotRegisterAttendees = \u7121\u6cd5\u8a3b\u518a\u53c3\u8207\u8005
+modifyAlertNotice = WebEx \u6703\u8b70\u5df2\u7d93\u6210\u529f\u5efa\u7acb\u3002<br><br>\u8acb\u6ce8\u610f\uff1a<br>\u5982\u4f60\u4fee\u6539\u6b64\u6703\u8b70\uff08\u5176\u5167\u5bb9\u9664\u5916\uff09\uff0c\u4f60\u4fbf\u9700\u8981\u91cd\u65b0\u5efa\u7acb WebEx \u6703\u8b70
 
 #
 # Calendar
