Bug: 62454 check in 7.1.3 drop 1 and bug fixes for 13 locales
http://bugzilla.zimbra.com/show_bug.cgi?id=62454

Copied from Perforce
 Change: 329064

--- a/src/zimlet/com_zimbra_date/com_zimbra_date_pl.properties
+++ b/src/zimlet/com_zimbra_date/com_zimbra_date_pl.properties
@@ -143,7 +143,7 @@ format5.pattern = zesz\u0142y/zesz\u0142a {dayname}
 format5.rule = now -1 {dayname}
 
 # e.g. first Wed in April
-format6.pattern = {weekord} {dayname} (:|:) {monthname}
+format6.pattern = {weekord} {dayname} (of|in) {monthname}
 format6.rule = now date=1 +1 {monthname} week={weekord},{dayname}
 
 # e.g. 3rd Monday
@@ -151,27 +151,27 @@ format7.pattern = {weekord} {dayname}
 format7.rule = now {weekord} {dayname}
 
 # e.g. 1st of Dec
-format8.pattern = {datenum}(.|.|.|.)? (:|:) {monthname}
+format8.pattern = {datenum}(st|nd|rd|th)? (of|in) {monthname}
 format8.rule = now month={monthname},{datenum}
 
 # e.g. Jan 16th, 1973
-format9.pattern = {datenum}(.|.|.|.)? {monthname}.? {yearnum}
+format9.pattern = {monthname}.? {datenum}(st|nd|rd|th)?, {yearnum}
 format9.rule = now year={yearnum},{monthname},{datenum}
 
 # e.g. Jan 16th
-format10.pattern = {datenum}(.|.|.|.)? {monthname}.? 
+format10.pattern = {monthname}.? {datenum}(st|nd|rd|th)?
 format10.rule = now month={monthname},{datenum}
 
 # e.g. Wed, 30 January 1980
-format11.pattern = {dayname}., {datenum} {monthname} {yearnum}
+format11.pattern = {dayname}, {datenum} {monthname} {yearnum}
 format11.rule = now year={yearnum},{monthname},{datenum}
 
 # e.g. 30 January 1980
-format12.pattern = {datenum} {monthname} {yearnum}
+format12.pattern = {datenum} {monthname}.? {yearnum}
 format12.rule = now year={yearnum},{monthname},{datenum}
 
 # e.g. 9/23/1970
-format13.pattern = {yearnum}-{monthnum}-{datenum}
+format13.pattern = {monthnum}/{datenum}/{yearnum}
 format13.rule = now year={yearnum},{monthnum},{datenum}
 
 # e.g. 1970-09-23
@@ -189,11 +189,11 @@ format16.pattern = {dayname}
 format16.rule = now +1 {dayname}
 
 # e.g. 16th Jan, 1973
-format17.pattern = {datenum}(.|.|.|.)? {monthname}.? {yearnum}
+format17.pattern = {datenum}(st|nd|rd|th)? {monthname}.? {yearnum}
 format17.rule = now year={yearnum},{monthname},{datenum}
 
 # e.g. Wednesday, October 08
-format18.pattern = {dayname} {monthname} {datenum}
+format18.pattern = {dayname}, {monthname} {datenum}
 format18.rule = now month={monthname},{datenum}
 
 # Some US holidays -- these can be overwritten per locale
