--- a/src/zimlet/com_zimbra_gmaps/com_zimbra_gmaps_es.properties
+++ b/src/zimlet/com_zimbra_gmaps/com_zimbra_gmaps_es.properties
@@ -30,7 +30,7 @@ mapLanguage=
 #
 #PS: In most non-english speaking countries(like Japanese), just populating this should be enough.
 ###########################################################################################
-completeAddressRegex = 
+completeAddressRegex = ((\\w+\\sde\\sla\\s\\w+)|\\w+)\\s(\\d+(\\s?-\\s?\\d+\\w?)?)\\,?\\s\\d+\\s\\,?(\\w?\\s?)+\\,?\\sspain
 
 
 ###########################################################################################
