--- a/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_es.properties
+++ b/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_es.properties
@@ -15,7 +15,7 @@
 
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = LinkedIn
-description = Se enlaza con el correo electr\u00f3nico de Zimlet; muestra los resultados de b\u00fasqueda de LinkedIn para un correo electr\u00f3nico determinado
+description = Se enlaza con el correo electr\u00f3nico de Zimlet; muestra los resultados de b\u00fasqueda de LinkedIn para un correo electr\u00f3nico determinado.
 
 label = LinkedIn
 tooltip = Configurar la cuenta de LinkedIn
