--- a/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_fr.properties
+++ b/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_fr.properties
@@ -15,7 +15,7 @@
 
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = LinkedIn
-description = Connecte aux mails Zimlet, affiche les r\u00e9sultats de recherche LinkedIn pour un mail donn\u00e9
+description = Se connecte aux mails Zimlet\u00a0; affiche les r\u00e9sultats de recherche LinkedIn pour un mail donn\u00e9.
 
 label = LinkedIn
 tooltip = Configurer compte LinkedIn
