--- a/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_hu.properties
+++ b/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_hu.properties
@@ -15,7 +15,7 @@
 
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = LinkedIn
-description = Az e-mail Zimlethez csatlakozva egy adott e-mail \u00fczenet LinkedIn keres\u00e9si eredm\u00e9nyeit jelen\u00edti meg
+description = Az e-mail Zimlethez csatlakozva egy adott e-mail \u00fczenet LinkedIn keres\u00e9si eredm\u00e9nyeit jelen\u00edti meg.
 
 label = LinkedIn
 tooltip = LinkedIn-fi\u00f3k be\u00e1ll\u00edt\u00e1sa
