--- a/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_ro.properties
+++ b/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_ro.properties
@@ -15,7 +15,7 @@
 
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = LinkedIn
-description = Se ata\u015feaz\u0103 la Zimletul de e-mail; afi\u015feaz\u0103 rezultatul de c\u0103utare pe LinkedIn pentru un anumit e-mail
+description = Se ata\u015feaz\u0103 la Zimletul de e-mail; afi\u015feaz\u0103 rezultatul de c\u0103utare pe LinkedIn pentru un anumit e-mail.
 
 label = LinkedIn
 tooltip = Configurare cont LinkedIn
