--- a/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_tr.properties
+++ b/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_tr.properties
@@ -15,7 +15,7 @@
 
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = LinkedIn
-description = E-posta Zimbra Uygulamac\u0131\u011f\u0131'na ba\u011flan\u0131r, belirli bir e-posta i\u00e7in LinkedIn arama sonu\u00e7lar\u0131n\u0131 g\u00f6sterir
+description = E-posta Zimbra Uygulamac\u0131\u011f\u0131'na ba\u011flan\u0131r, belirli bir e-posta i\u00e7in LinkedIn arama sonu\u00e7lar\u0131n\u0131 g\u00f6sterir.
 
 label = LinkedIn
 tooltip = LinkedIn hesab\u0131n\u0131 yap\u0131land\u0131r
