--- a/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_zh_CN.properties
+++ b/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_zh_CN.properties
@@ -15,7 +15,7 @@
 
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = LinkedIn
-description = \u6302\u63a5\u5230\u7535\u5b50\u90ae\u4ef6 Zimlet\uff1b\u663e\u793a\u7ed9\u5b9a\u7535\u5b50\u90ae\u4ef6\u7684 LinkedIn \u641c\u7d22\u7ed3\u679c
+description = \u6302\u63a5\u5230\u7535\u5b50\u90ae\u4ef6 Zimlet\uff1b\u663e\u793a\u7ed9\u5b9a\u7535\u5b50\u90ae\u4ef6\u7684 LinkedIn \u641c\u7d22\u7ed3\u679c\u3002
 
 label = LinkedIn
 tooltip = \u914d\u7f6e LinkedIn \u5e10\u6237
