--- a/src/zimlet/com_zimbra_url/com_zimbra_url_es.properties
+++ b/src/zimlet/com_zimbra_url/com_zimbra_url_es.properties
@@ -15,4 +15,4 @@
 
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = Enlaces URL
-description = Resaltar las URL de p\u00e1ginas web para crear enlaces en los mensajes de correo electr\u00f3nico
+description = Resaltar las URL de p\u00e1ginas web para crear enlaces en los mensajes de correo electr\u00f3nico.
