--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex_de.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex_de.properties
@@ -142,6 +142,7 @@ WebExZimlet_invalidAlternateHost=Ung\u00fcltiger alternativer Host.<br/>Mit alte
 WebExZimlet_setupAlternateHost=Mit alternativen Hosts k\u00f6nnen andere Hosts Besprechungen f\u00fcr Sie planen. F\u00fcr die Verwendung dieser Funktion muss diese in Ihrem WebEx-Profil konfiguriert sein.<br/><br/>So erteilen Sie die Berechtigung f\u00fcr einen alternativen Host:<br/>1. Melden Sie sich bei Ihrem WebEx-Account an.<br/>2. W\u00e4hlen Sie Einrichten > Mein Profil > Sitzungsoptionen > Planungsberechtigung.<br/>3. Geben Sie alternative Hosts ein.<br/>4. Speichern Sie Ihr Profil.
 WebExZimlet_userPwdCIdRequired= WebEx-Nutzername, -Passwort und -Firmen-ID m\u00fcssen angegeben werden.
 WebExZimlet_couldNotRegisterAttendees = Teilnehmer konnten nicht registriert werden
+modifyAlertNotice = WebEx-Besprechung wurde erfolgreich erstellt. <br><br>Hinweis:<br> Wenn Sie diese Besprechung \u00e4ndern (au\u00dfer den Inhalt des Textk\u00f6rpers), m\u00fcssen Sie die WebEx-Besprechung neu erstellen.
 
 #
 # Calendar
