--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex_es.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex_es.properties
@@ -142,6 +142,7 @@ WebExZimlet_invalidAlternateHost=Anfitri\u00f3n alternativo no v\u00e1lido.<br/>
 WebExZimlet_setupAlternateHost=Los anfitriones alternativos se usan para permitir que otros anfitriones programen reuniones en tu nombre. Para usar esta funci\u00f3n, se debe configurar en el Perfil de WebEx. <br/><br/>Para permitir que alguien act\u00fae como anfitri\u00f3n alternativo:<br/>1. Inicia sesi\u00f3n en tu cuenta WebEx.<br/>2. Ve a Configuraci\u00f3n > Mi perfil > Opciones de sesi\u00f3n > Permiso de programaci\u00f3n.<br/>3. Introduce anfitriones alternativos.<br/>4. Guarda el perfil.
 WebExZimlet_userPwdCIdRequired= El nombre de usuario, la contrase\u00f1a y el ID de la empresa WebEx son obligatorios.
 WebExZimlet_couldNotRegisterAttendees = No se ha podido registrar a los asistentes
+modifyAlertNotice = La reuni\u00f3n de WebEx se ha creado correctamente. <br><br>Ten en cuenta que:<br> Si modificas esta reuni\u00f3n (excepto el cuerpo), deber\u00e1s volver a crear la reuni\u00f3n de WebEx
 
 #
 # Calendar
