--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex_pl.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex_pl.properties
@@ -142,6 +142,7 @@ WebExZimlet_invalidAlternateHost=Nieprawid\u0142owy Gospodarz zast\u0119pczy.<br
 WebExZimlet_setupAlternateHost=Funkcja Gospodarzy zast\u0119pczych pozwala innym gospodarzom planowa\u0107 spotkania w Twoim imieniu. Aby m\u00f3c z niej korzysta\u0107, nale\u017cy j\u0105 skonfigurowa\u0107 w swoim Profilu WebEx. <br/><br/>Aby przyzna\u0107 uprawnienia gospodarzowi zast\u0119pczemu:<br/>1. Zaloguj si\u0119 na swoim koncie WebEx.<br/>2. Id\u017a do: Konfiguracja > M\u00f3j profil > Opcje sesji > Uprawnienie do planowania.<br/>3. Wprowad\u017a dane Gospodarzy zast\u0119pczych.<br/>4. Zapisz profil.
 WebExZimlet_userPwdCIdRequired= Wymagane s\u0105: nazwa u\u017cytkownika WebEx, has\u0142o i identyfikator firmy.
 WebExZimlet_couldNotRegisterAttendees = Nie mo\u017cna zarejestrowa\u0107 uczestnik\u00f3w
+modifyAlertNotice = Spotkanie WebEx zosta\u0142o pomy\u015blnie utworzone. <br><br>Uwaga:<br> W przypadku modyfikacji tego spotkania (poza jego tre\u015bci\u0105) konieczne b\u0119dzie ponowne utworzenie spotkania WebEx
 
 #
 # Calendar
