--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex_ro.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex_ro.properties
@@ -142,6 +142,7 @@ WebExZimlet_invalidAlternateHost=Gazd\u0103 alternativ\u0103 nevalabil\u0103.<br
 WebExZimlet_setupAlternateHost=Gazdele alternative pot planifica \u015fedin\u0163e \u00een numele dvs. Pentru a folosi aceast\u0103 func\u0163ie trebuie s\u0103 o configura\u0163i \u00een profilul dvs. WebEx. <br/><br/>Pentru a permite o gazd\u0103 alternativ\u0103:<br/>1. Autentifica\u0163i-v\u0103 \u00een contul WebEx.<br/>2. Merge\u0163i la Configurare > Profilul meu > Op\u0163iuni sesiune > Permitere planificare.<br/>3. Introduce\u0163i gazdele alternative.<br/>4. Salva\u0163i profilul.
 WebExZimlet_userPwdCIdRequired= Sunt necesare numele de utilizator, parola \u015fi ID de companie pentru WebEx.
 WebExZimlet_couldNotRegisterAttendees = Nu s-au putut \u00eenregistra participan\u0163ii
+modifyAlertNotice = S-a creat o \u00eent\u00e2lnire WebEx. <br><br>Aten\u0163ie:<br> Dac\u0103 modifica\u0163i aceast\u0103 \u00eent\u00e2lnire (altceva dec\u00e2t con\u0163inutul), va trebui s\u0103 recrea\u0163i \u00eent\u00e2lnirea WebEx
 
 #
 # Calendar
