--- a/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_pl.properties
+++ b/src/zimlet/com_zimbra_linkedin/com_zimbra_linkedin_pl.properties
@@ -15,7 +15,7 @@
 
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = LinkedIn
-description = Zaczepia si\u0119 do zimleta wiadomo\u015b\u0107 e-mail; wy\u015bwietla wynik wyszukiwania LinkedIn dla danej wiadomo\u015bci e-mail
+description = Zaczepia si\u0119 do zimleta wiadomo\u015b\u0107 e-mail; wy\u015bwietla wynik wyszukiwania LinkedIn dla danej wiadomo\u015bci e-mail.
 
 label = LinkedIn
 tooltip = Konfiguruj konto LinkedIn
