--- a/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_en_AU.properties
+++ b/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_en_AU.properties
@@ -14,7 +14,7 @@
 # 
 
 label = Search Highlighter
-description = After a mail search, this Zimlet highlights Search terms with yellow colour
+description = After a mail search, this Zimlet highlights Search terms in yellow.
 
 SearchHighlighterZimlet_MenuLabel=Clear Search Highlights
 SearchHighlighterZimlet_ZimletError=Search Highlighter Zimlet Error:
