--- a/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_pl.properties
+++ b/src/zimlet/com_zimbra_srchhighlighter/com_zimbra_srchhighlighter_pl.properties
@@ -14,7 +14,7 @@
 # 
 
 label = Pod\u015bwietlenie wyszukiwania
-description = Po wyszukiwaniu poczty ten zimlet pod\u015bwietla has\u0142a wyszukiwania kolorem \u017c\u00f3\u0142tym
+description = Po wyszukiwaniu poczty ten zimlet pod\u015bwietla has\u0142a wyszukiwania kolorem \u017c\u00f3\u0142tym.
 
 SearchHighlighterZimlet_MenuLabel=Wyczy\u015b\u0107 pod\u015bwietlenia wyszukiwania
 SearchHighlighterZimlet_ZimletError=B\u0142\u0105d zimletu wyszukiwania z pod\u015bwietlaniem:
