--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex_fr.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex_fr.properties
@@ -142,6 +142,7 @@ WebExZimlet_invalidAlternateHost=H\u00f4te de substitution invalide.<br/>Les h\u
 WebExZimlet_setupAlternateHost=Les h\u00f4tes de substitution sont utilis\u00e9s pour permettre aux autres h\u00f4tes de programmer les r\u00e9unions en votre nom. Pour utiliser cette fonction, elle doit \u00eatre configur\u00e9e dans votre profil WebEx. <br/><br/>Pour autoriser un h\u00f4te de substitution\u00a0:<br/>1. Connectez-vous \u00e0 votre compte WebEx.<br/>2. Acc\u00e9dez \u00e0 Param\u00e8tres > Mon profil > Option de session > Autorisation de programmation.<br/>3. Entrez les h\u00f4tes de substitution.<br/>4. Enregistrez votre profil.
 WebExZimlet_userPwdCIdRequired= Le nom d'utilisateur, le mot de passe et l'identifiant WebEx de la soci\u00e9t\u00e9 sont n\u00e9cessaires.
 WebExZimlet_couldNotRegisterAttendees = Impossible d'enregistrer les participants
+modifyAlertNotice = La r\u00e9union WebEx a \u00e9t\u00e9 cr\u00e9\u00e9e avec succ\u00e8s. <br><br>Remarque\u00a0:<br> Si vous modifiez cette r\u00e9union (\u00e9l\u00e9ment autre que le contenu du corps), vous devrez cr\u00e9er de nouveau la r\u00e9union WebEx.
 
 #
 # Calendar
