--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex_hu.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex_hu.properties
@@ -142,6 +142,7 @@ WebExZimlet_invalidAlternateHost=\u00c9rv\u00e9nytelen alternat\u00edv hoszt. <b
 WebExZimlet_setupAlternateHost=Az Alternat\u00edv hosztok lehet\u0151s\u00e9g lehet\u0151v\u00e9 teszi m\u00e1s hosztok sz\u00e1m\u00e1ra a tal\u00e1lkoz\u00f3k \u00fctemez\u00e9s\u00e9t az \u00d6n nev\u00e9ben. A funkci\u00f3t a haszn\u00e1lat\u00e1hoz el\u0151sz\u00f6r konfigur\u00e1lni kell a WebEx-profilban. <br/><br/>Jogosults\u00e1g megad\u00e1sa egy alternat\u00edv hoszt sz\u00e1m\u00e1ra:<br/>1. Jelentkezzen be a WebEx-fi\u00f3kj\u00e1ba.<br/>2. V\u00e1lassza ki a Be\u00e1ll\u00edt\u00e1s > Saj\u00e1t profil > Munkamenet-be\u00e1ll\u00edt\u00e1sok > \u00dctemez\u00e9si jogosults\u00e1g men\u00fcpontot.<br/>3. Adja meg az alternat\u00edv hosztokat.<br/>4. Mentse el a profilt.
 WebExZimlet_userPwdCIdRequired= WebEx-felhaszn\u00e1l\u00f3n\u00e9v, jelsz\u00f3 \u00e9s c\u00e9gazonos\u00edt\u00f3 sz\u00fcks\u00e9ges.
 WebExZimlet_couldNotRegisterAttendees = A r\u00e9sztvev\u0151k regisztr\u00e1l\u00e1sa sikertelen volt
+modifyAlertNotice = A WebEx \u00e9rtekezlet sikeresen l\u00e9trej\u00f6tt. <br><br>Megjegyz\u00e9s:<br> Ha az \u00e9rtekezletet m\u00f3dos\u00edtja (nem a sz\u00f6vegt\u00f6rzs\u00e9t, hanem valami m\u00e1st), akkor \u00fajra l\u00e9tre kell hoznia a WebEx \u00e9rtekezletet
 
 #
 # Calendar
