--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex_ko.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex_ko.properties
@@ -142,6 +142,7 @@ WebExZimlet_invalidAlternateHost=\uc62c\ubc14\ub974\uc9c0 \uc54a\uc740 \ub2e4\ub
 WebExZimlet_setupAlternateHost=\ub2e4\ub978 \ud638\uc2a4\ud2b8\ub294 \uc0ac\uc6a9\uc790 \ub300\uc2e0 \ubbf8\ud305\uc744 \uc608\uc57d\ud558\ub3c4\ub85d \ud558\ub294 \ub370 \uc0ac\uc6a9\ub429\ub2c8\ub2e4. \uc774 \uae30\ub2a5\uc744 \uc0ac\uc6a9\ud558\ub824\uba74 \uc774\ub97c \uc0ac\uc6a9\uc790\uc758 WebEx \ud504\ub85c\ud544\uc5d0 \uad6c\uc131\ud574\uc57c \ud569\ub2c8\ub2e4.<br/><br/>\ub2e4\ub978 \ud638\uc2a4\ud2b8\uc5d0 \ub300\ud55c \uad8c\ud55c\uc744 \ud5c8\uc6a9\ud558\ub824\uba74:<br/>1. \uc0ac\uc6a9\uc790\uc758 WebEx \uacc4\uc815\uc5d0 \ub85c\uadf8\uc778\ud569\ub2c8\ub2e4.<br/>2. \uc124\uc815 > \ub0b4 \ud504\ub85c\ud544 > \uc138\uc158 \uc635\uc158 > \uc608\uc57d \uad8c\ud55c\uc73c\ub85c \uac11\ub2c8\ub2e4.<br/>3. \ub2e4\ub978 \ud638\uc2a4\ud2b8\ub97c \uc785\ub825\ud569\ub2c8\ub2e4.<br/>4. \uc0ac\uc6a9\uc790 \ud504\ub85c\ud544\uc744 \uc800\uc7a5\ud569\ub2c8\ub2e4.
 WebExZimlet_userPwdCIdRequired= WebEx \uc0ac\uc6a9\uc790 \uc774\ub984, \ube44\ubc00\ubc88\ud638 \ubc0f \ud68c\uc0ac Id\uac00 \ud544\uc694\ud569\ub2c8\ub2e4.
 WebExZimlet_couldNotRegisterAttendees = \ucc38\uc11d\uc790\ub97c \ub4f1\ub85d\ud560 \uc218 \uc5c6\uc74c
+modifyAlertNotice = WebEx \ubbf8\ud305\uc774 \uc0dd\uc131\ub418\uc5c8\uc2b5\ub2c8\ub2e4. <br><br>\ucc38\uace0:<br> \uc774 WebEx \ubbf8\ud305\uc744 \uc218\uc815\ud558\uba74(\ubcf8\ubb38 \ub0b4\uc6a9 \uc678) \ub098\uc911\uc5d0 \ud574\ub2f9 \ubbf8\ud305\uc744 \ub2e4\uc2dc \uc0dd\uc131\ud574\uc57c \ud569\ub2c8\ub2e4.
 
 #
 # Calendar
