--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex_tr.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex_tr.properties
@@ -142,6 +142,7 @@ WebExZimlet_invalidAlternateHost=Ge\u00e7ersiz yedek Y\u00f6netici.<br/>Yedek Y\
 WebExZimlet_setupAlternateHost=Yedek Y\u00f6neticiler, di\u011fer y\u00f6neticilerin sizin yerinize toplant\u0131lar\u0131 zamanlamas\u0131na izin vermek i\u00e7in kullan\u0131l\u0131r. Bu \u00f6zellik, WebEx Profilinizde yap\u0131land\u0131r\u0131l\u0131rsa kullan\u0131labilir. <br/><br/>Yedek bir y\u00f6neticiye izin vermek i\u00e7in:<br/>1. WebEx hesab\u0131n\u0131zda oturum a\u00e7\u0131n.<br/>2. Ayarlar > Profilim > Oturum Se\u00e7enekleri > Zamanlama izni se\u00e7ene\u011fine gidin.<br/>3. Yedek Y\u00f6neticileri girin.<br/>4. Profilinizi kaydedin.
 WebExZimlet_userPwdCIdRequired= WebEx Kullan\u0131c\u0131 Ad\u0131, Parolas\u0131 ve \u015eirket Kimli\u011fi gereklidir.
 WebExZimlet_couldNotRegisterAttendees = Kat\u0131l\u0131mc\u0131lar kaydedilemedi
+modifyAlertNotice = WebEx toplant\u0131s\u0131 ba\u015far\u0131yla olu\u015fturuldu. <br><br>\u00d6nemli Not:<br> Bu toplant\u0131y\u0131 de\u011fi\u015ftirirseniz (g\u00f6vde i\u00e7eri\u011fi d\u0131\u015f\u0131nda), WebEx toplant\u0131s\u0131n\u0131 yeniden olu\u015fturman\u0131z gerekecektir
 
 #
 # Calendar
